# webvory

./: .env.example  .gitignore  README.md  demo.txt  pyproject.toml  retail_agent.py  test.ipynb
data/: orders.csv  play.ipynb
